--- a/tr.html
+++ b/tr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  
+
 <html lang="en">
 
 <head>
@@ -37,37 +37,34 @@
     </section>
   </header>
   <main>
-    <header>
-      <h1>Accessibility Features: Easy Wins</h1>
-      <h2>Handy tips on how to create accessible websites for everyone</h2>
-      <img src="./atricle-image-small.png" alt="A person using a computer with a screen reader">
-      <nav id="article">
-        <ul>
-
-          <li><a href="#introduction">Introduction</a></li>
-
-          <li><a href="#accessibility-checks">Accessibility Checks</a></li>
-
-            <ul>
-              <li><a href="#text-size">Text Size</a></li>
-              <li><a href="#images">Images</a></li>
-              <li><a href="#links">Hyperlinks</a></li>
-              <li><a href="#scripts">Use of Scripting Languages</a></li>
-              <li><a href="#colour">Colour and Contrast</a></li>
-              <li><a href="#css">Style Sheets</a></li>
-              <li><a href="#Forms">Form Design</a></li>
-            </ul>
-
-          <li><a href="#conclusion">Conclusion</a></li>
-
-        </ul>
-      </nav>
-    </header>
-      <author>
-        By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21
-      </author>
-
     <article>
+      <header>
+        <h1>Accessibility Features: Easy Wins</h1>
+        <h2>Handy tips on how to create accessible websites for everyone</h2>
+        <img src="./atricle-image-small.png" alt="A person using a computer with a screen reader">
+        <nav id="article">
+          <ul>
+
+            <li><a href="#introduction">Introduction</a></li>
+
+            <li><a href="#accessibility-checks">Accessibility Checks</a></li>
+
+            <li><a href="#text-size">Text Size</a></li>
+            <li><a href="#images">Images</a></li>
+            <li><a href="#links">Hyperlinks</a></li>
+            <li><a href="#scripts">Use of Scripting Languages</a></li>
+            <li><a href="#colour">Colour and Contrast</a></li>
+            <li><a href="#css">Style Sheets</a></li>
+            <li><a href="#Forms">Form Design</a></li>
+
+            <li><a href="#conclusion">Conclusion</a></li>
+
+          </ul>
+        </nav>
+      </header>
+      <p> By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21</p>
+
+
       <section id="introduction">
         <h2>Introduction</h2>
         <p>Tim Berners Lee dreamt of a World Wide Web that would be free and accessible to everyone. Sadly, the modern
@@ -85,115 +82,116 @@
           heading.
           By using heading elements correctly, users can easily understand the organization of the content on a page and
           quickly find the information they need.</p>
-
-        <section id="accessibility-checks">
-          <section id="Text-size">
-            <h3>Text Size</h3>
-            <p>Text size on a web page can also be adjusted to meet the needs of different users. This can be done using
-              the text resize settings in a browser, text-only zoom, or page zoom. These options allow users to increase
-              or
-              decrease the size of the text on a page without causing issues such as text overlapping or being cut off
-              the
-              page.</p>
-          </section>
-          <section id="images">
-            <h3>Images and Alt-Text</h3>
-            <p>Images on a web page should also have alternative text, also known as "alt text," to provide a
-              description
-              of
-              the image for users who are unable to see it. This is particularly important for users who are using
-              screen
-              readers or other assistive technologies.</p>
-          </section>
-          <section id="links">
-            <h3>Hyperlinks</h3>
-            <p>Hyperlinks, also known as links, should make sense when read out of context, and they should be clearly
-              presented in a different text style from the normal body text. Links that open in a new browser page
-              should be labeled as such.</p>
-          </section>
-          <section id="scripts">
-            <h3>Use of Scripting Languages</h3>
-            <p>JavaScript and other scripts are often used for navigation or functionality on a web page, but it is
-              important
-              to have an alternative mechanism in place for users whose browsers do not support these scripts. This
-              ensures
-              that all users can access the information on the website.</p>
-          </section>
-          <section id="colour">
-            <h3>Colour and Contrast</h3>
-            <p>The color contrast between text and background on a web page should be sufficient to ensure that the text
-              is
-              easy to read. It is also important to ensure that information is not referenced by color alone, as this
-              can
-              make
-              it difficult for users who are colorblind to access the information.</p>
-          </section>
-          <section id=css>
-            <h3>Style Sheets</h3>
-            <p>Style sheets, which control the appearance of a web page, can sometimes cause issues if they are not
-              supported
-              or turned off. It is important to ensure that the information on the website can still be accessed and
-              read
-              even
-              if style sheets are not supported.</p>
-          </section>
-          <section id="forms">
-            <h3>Form Design</h3>
-            <p>Forms on a web page should be marked up correctly so that they can be used with only the keyboard,
-              voice
-              input,
-              or screen readers. Form labels should be clickable, increasing the target area and making it easier to
-              select
-              small radio buttons or checkboxes.</p>
-          </section>
+      </section>
+      <section id="accessibility-checks">
+        <h2>Accessibility Checks</h2>
+        <section id="Text-size">
+          <h3>Text Size</h3>
+          <p>Text size on a web page can also be adjusted to meet the needs of different users. This can be done using
+            the text resize settings in a browser, text-only zoom, or page zoom. These options allow users to increase
+            or
+            decrease the size of the text on a page without causing issues such as text overlapping or being cut off
+            the
+            page.</p>
         </section>
-        <summary id="conclusion">
-          <h3>Conclusion</h3>
-          <p>Web accessibility is important to ensure that all users can access the information on a website.
-            By using HTML heading elements, re-sizing text, providing alternative text for images, using clear link
-            text,
-            having JavaScript independence, checking color contrast, ensuring style sheet support, and correctly marking
-            up
-            forms, web developers can create websites that are accessible to all users, including those with
-            disabilities.
-          </p>
-          <p>For more information on Web Accessibility view <a
-              href="https://www.w3.org/WAI/test-evaluate/preliminary/">The W3C Web Accessibility Initiative</a></p>
-        </summary>
+        <section id="images">
+          <h3>Images and Alt-Text</h3>
+          <p>Images on a web page should also have alternative text, also known as "alt text," to provide a
+            description
+            of
+            the image for users who are unable to see it. This is particularly important for users who are using
+            screen
+            readers or other assistive technologies.</p>
+        </section>
+        <section id="links">
+          <h3>Hyperlinks</h3>
+          <p>Hyperlinks, also known as links, should make sense when read out of context, and they should be clearly
+            presented in a different text style from the normal body text. Links that open in a new browser page
+            should be labeled as such.</p>
+        </section>
+        <section id="scripts">
+          <h3>Use of Scripting Languages</h3>
+          <p>JavaScript and other scripts are often used for navigation or functionality on a web page, but it is
+            important
+            to have an alternative mechanism in place for users whose browsers do not support these scripts. This
+            ensures
+            that all users can access the information on the website.</p>
+        </section>
+        <section id="colour">
+          <h3>Colour and Contrast</h3>
+          <p>The color contrast between text and background on a web page should be sufficient to ensure that the text
+            is
+            easy to read. It is also important to ensure that information is not referenced by color alone, as this
+            can
+            make
+            it difficult for users who are colorblind to access the information.</p>
+        </section>
+        <section id=css>
+          <h3>Style Sheets</h3>
+          <p>Style sheets, which control the appearance of a web page, can sometimes cause issues if they are not
+            supported
+            or turned off. It is important to ensure that the information on the website can still be accessed and
+            read
+            even
+            if style sheets are not supported.</p>
+        </section>
+        <section id="forms">
+          <h3>Form Design</h3>
+          <p>Forms on a web page should be marked up correctly so that they can be used with only the keyboard,
+            voice
+            input,
+            or screen readers. Form labels should be clickable, increasing the target area and making it easier to
+            select
+            small radio buttons or checkboxes.</p>
+        </section>
+      </section>
+      <section id="conclusion">
+        <h3>Conclusion</h3>
+        <p>Web accessibility is important to ensure that all users can access the information on a website.
+          By using HTML heading elements, re-sizing text, providing alternative text for images, using clear link
+          text,
+          having JavaScript independence, checking color contrast, ensuring style sheet support, and correctly marking
+          up
+          forms, web developers can create websites that are accessible to all users, including those with
+          disabilities.
+        </p>
+        <p>For more information on Web Accessibility view <a
+            href="https://www.w3.org/WAI/test-evaluate/preliminary/">The W3C Web Accessibility Initiative</a></p>
+      </section>
+
+      <footer>
+        <nav>
+          <h2>More Stories</h2>
+          <ul>
+            <li><a href="https://youtu.be/EWbgKCENqn0">Tokyo Olympics: gold for Great Britain!</a></li>
+            <li><a href="https://www.youtube.com/watch?v=2Z4m4lnjxkY">A day in the life of</a></li>
+            <li><a href="https://www.youtube.com/watch?v=MGXSPf9b-xI">Call for action as UK driver shortage hits
+                supermarkets</a></li>
+            <li><a href="https://youtu.be/nYDiggEp-hw">The six worst school sports memories of your
+                childhood</a></li>
+            <li><a href="https://www.youtube.com/watch?v=6n8LdHRifOk">Clairvoyants evening cancelled from unforeseen
+                circumstances</a></li>
+            <li><a href="https://www.youtube.com/watch?v=oOGJQD0WXkk">Safety meeting ends in accident</a></li>
+            <li><a href="https://www.youtube.com/watch?v=l0ndz20w2Oc">Russian traffic officer with golden toilet is
+                arrested after police uncover massive bribery scheme</a></li>
+            <li><a href="https://www.youtube.com/watch?v=aotlEpmAFVQ">Jellyfish apocalypse is coming claim
+                scientists</a></li>
+          </ul>
+        </nav>
+
+      </footer>
     </article>
-
-    <footer>
-      <nav>
-        <h2>More Stories</h2>
-        <ul>
-          <li><a href="https://youtu.be/EWbgKCENqn0">Tokyo Olympics: gold for Great Britain!</a></li>
-          <li><a href="https://www.youtube.com/watch?v=2Z4m4lnjxkY">A day in the life of</a></li>
-          <li><a href="https://www.youtube.com/watch?v=MGXSPf9b-xI">Call for action as UK driver shortage hits
-              supermarkets</a></li>
-          <li><a href="https://youtu.be/nYDiggEp-hw">The six worst school sports memories of your
-              childhood</a></li>
-          <li><a href="https://www.youtube.com/watch?v=6n8LdHRifOk">Clairvoyants evening cancelled from unforeseen
-              circumstances</a></li>
-          <li><a href="https://www.youtube.com/watch?v=oOGJQD0WXkk">Safety meeting ends in accident</a></li>
-          <li><a href="https://www.youtube.com/watch?v=l0ndz20w2Oc">Russian traffic officer with golden toilet is
-              arrested after police uncover massive bribery scheme</a></li>
-          <li><a href="https://www.youtube.com/watch?v=aotlEpmAFVQ">Jellyfish apocalypse is coming claim
-              scientists</a></li>
-        </ul>
-      </nav>
-
-    </footer>
   </main>
   <footer>
     <img src="trlogo.jpg" alt="Tech returners logo">
     <nav>
       <ul>
-      <li><a href="stopsign.jpg">News</a>
-      <li><a href="stopsign.jpg">Opinion</a></li>
-      <li><a href="stopsign.jpg">Sport</a></li>
-      <li><a href="stopsign.jpg">Culture</a></li>
-      <li><a href="stopsign.jpg">Tech</a></li>
-    </ul>
+        <li><a href="stopsign.jpg">News</a>
+        <li><a href="stopsign.jpg">Opinion</a></li>
+        <li><a href="stopsign.jpg">Sport</a></li>
+        <li><a href="stopsign.jpg">Culture</a></li>
+        <li><a href="stopsign.jpg">Tech</a></li>
+      </ul>
     </nav>
     <p>© 2021 Tech Returners News</p>
   </footer>
