Basic Style Sheet

--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
   <title>Accessibility Features: Easy Wins</title>
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/index.css">
+  </head>
 
 <body>
   <header>
@@ -41,7 +40,7 @@
       <header>
         <h1>Accessibility Features: Easy Wins</h1>
         <h2>Handy tips on how to create accessible websites for everyone</h2>
-        <img src="./atricle-image-small.png" alt="A person using a computer with a screen reader">
+        <img src="../img/atricle-image-small.png" alt="A person using a computer with a screen reader">
         <nav id="article">
           <ul>
 
@@ -183,7 +182,7 @@
     </article>
   </main>
   <footer>
-    <img src="trlogo.jpg" alt="Tech returners logo">
+    <img src="../img/trlogo.jpg" alt="Tech returners logo">
     <nav>
       <ul>
         <li><a href="stopsign.jpg">News</a>
