Images Fixed - realised I was editing wrong version of the file

--- a/html/index.html
+++ b/html/index.html
@@ -25,23 +25,30 @@
         <li class="--header-nav-li"><a href="jobs.html">Jobs</a></li>
       </UL>
     </nav>
-
-    <section id="accessibility-options" class="--header-options">
-      <h2>Preferences</h2>
-      <p>We aim to make this site accessible to a wide audience and to ensure a great experience for all users by
-        conforming to World Wide Web Consortium accessibility guidelines (W3C's WCAG). However, if you are having
-        trouble
-        reading this website you can change the way it looks or disable some of its functionalities.</p>
-      <form>
-        <input type="checkbox" id="allow-flashing-elements" checked>
-        <label for="allow-flashing-elements">Allow flashing elements</label>
-      </form>
+    <section="subheader">
+      <section id="article-title">
+        <h1>Accessibility Features: Easy Wins</h1>
+        <h2>Handy tips on how to create accessible websites for everyone</h2>
+      </section>
+      <section id="accessibility-options" class="--header-options">
+        <h2>Preferences</h2>
+        <p>We aim to make this site accessible to a wide audience and to ensure a great experience for all users by
+          conforming to World Wide Web Consortium accessibility guidelines (W3C's WCAG). However, if you are having
+          trouble
+          reading this website you can change the way it looks or disable some of its functionalities.</p>
+        <form>
+          <input type="checkbox" id="allow-flashing-elements" checked>
+          <label for="allow-flashing-elements">Allow flashing elements</label>
+        </form>
+      </section>
     </section>
   </header>
   <main>
     <article>
       <header>
-        <img src="../img/atricle-image-small.png" alt="A person using a computer with a screen reader">
+        <p> By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21</p>
+
+        <img src="../img/atricle-image.jpg" alt="A person using a computer with a screen reader">
         <nav id="article">
           <ul>
 
@@ -62,9 +69,7 @@
           </ul>
         </nav>
       </header>
-      <h1>Accessibility Features: Easy Wins</h1>
 
-      <p> By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21</p>
 
 
       <h2>Handy tips on how to create accessible websites for everyone</h2>
@@ -187,7 +192,7 @@
     </article>
   </main>
   <footer>
-    <img src="../img/trlogo.jpg" alt="Tech returners logo">
+    <img src="../img/trlogo.jpg" alt="Tech returners logo class="footer-logo">
     <nav>
       <ul>
         <li><a href="stopsign.jpg">News</a>
