--- a/html/index.html
+++ b/html/index.html
@@ -12,25 +12,26 @@
 
 <body>
   <header class="page-header">
-    <nav class="--header-nav">
+    <nav class="--nav --header-nav">
       <UL>
-        <li class="--header-nav-li"><a href="index.html">Tech Returner News</a></li>
-        <li class="--header-nav-li"><a href="news.html">News</a></li>
-        <li class="--header-nav-li"><a href="opinion.html">Opinion</a></li>
-        <li class="--header-nav-li"><a href="tech.html">Tech</a></li>
-        <li class="--header-nav-li"><a href="sport.html">Sport</a></li>
-        <li class="--header-nav-li"><a href="culture.html">Culture</a></li>
-        <li class="--header-nav-li"><a href="about.html">About</a></li>
-        <li class="--header-nav-li"><a href="lifestyle.html">Lifestyle</a></li>
-        <li class="--header-nav-li"><a href="jobs.html">Jobs</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Tech Returner News</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">News</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Opinion</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Tech</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Sport</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Culture</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">About</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Lifestyle</a></li>
+        <li class="--header-nav-li"><a href="../img/stopsign.jpg">Jobs</a></li>
       </UL>
     </nav>
-    <section="subheader">
-      <section id="article-title">
+    <section id="subheader">
+      <div id="article-title">
         <h1>Accessibility Features: Easy Wins</h1>
         <h2>Handy tips on how to create accessible websites for everyone</h2>
-      </section>
-      <section id="accessibility-options" class="--header-options">
+        <p> By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21</p>
+      </div>
+      <section class="--header-options">
         <h2>Preferences</h2>
         <p>We aim to make this site accessible to a wide audience and to ensure a great experience for all users by
           conforming to World Wide Web Consortium accessibility guidelines (W3C's WCAG). However, if you are having
@@ -42,124 +43,131 @@
         </form>
       </section>
     </section>
+    <nav class="--nav --article-nav">
+      <h1>Jump to: </h1>
+      <ul>
+        <li><a href="#-article-section-headings">Headings</a></li>
+        <li><a href="#text-size">Text Size</a></li>
+        <li><a href="#images">Images</a></li>
+        <li><a href="#links">Hyperlinks</a></li>
+        <li><a href="#scripts">Use of Scripting Languages</a></li>
+        <li><a href="#colour">Colour and Contrast</a></li>
+        <li><a href="#css">Style Sheets</a></li>
+        <li><a href="#Forms">Form Design</a></li>
+
+        <li><a href="#conclusion">Conclusion</a></li>
+
+      </ul>
+
+    </nav>
+
+
   </header>
   <main>
     <article>
-      <header>
-        <p> By <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs</a> on 04.08.21</p>
-
-        <img src="../img/atricle-image.jpg" alt="A person using a computer with a screen reader">
-        <nav id="article">
-          <ul>
-
-            <li><a href="#introduction">Introduction</a></li>
-
-            <li><a href="#accessibility-checks">Accessibility Checks</a></li>
-
-            <li><a href="#text-size">Text Size</a></li>
-            <li><a href="#images">Images</a></li>
-            <li><a href="#links">Hyperlinks</a></li>
-            <li><a href="#scripts">Use of Scripting Languages</a></li>
-            <li><a href="#colour">Colour and Contrast</a></li>
-            <li><a href="#css">Style Sheets</a></li>
-            <li><a href="#Forms">Form Design</a></li>
-
-            <li><a href="#conclusion">Conclusion</a></li>
-
-          </ul>
-        </nav>
-      </header>
-
-
-
-      <h2>Handy tips on how to create accessible websites for everyone</h2>
-
       <section id="introduction">
-        <h2>Introduction</h2>
-        <p>Tim Berners Lee dreamt of a World Wide Web that would be free and accessible to everyone. Sadly, the modern
-          web
-          is littered with poorly designed websites and difficult to navigate code (for both developers and users). This
-          often comes down to a lack of understanding around different user needs.</p>
-        <p>Designing pages that are accessible for everyone shouldn’t be too difficult. The developers at Tech Returners
-          News have collated an ‘easy wins' checklist for Web page accessibility. Keep this guide handy... When creating
-          your own websites you can check these criteria off the list!</p>
-        <p><a href="related-article.html">What would a truly accessible city look like? Read more..</a></p>
-        <h3>Headings</h3>
-        <p>HTML heading elements, such as H1, H2, and H3, are used to represent the structure of a web page. This
-          structure
-          is important for assistive technologies, such as screen readers, that allow users to navigate a page by
-          heading.
-          By using heading elements correctly, users can easily understand the organization of the content on a page and
-          quickly find the information they need.</p>
+        <img src="../img/atricle-image.jpg" alt="A person using a computer with a screen reader" object-fit: contain; id="article-image1">
+        <section id="introtext">
+          <h2>Introduction</h2>
+          <p>Tim Berners Lee dreamt of a World Wide Web that would be free and accessible to everyone. Sadly, the modern
+            web
+            is littered with poorly designed websites and difficult to navigate code (for both developers and users).
+            This
+            often comes down to a lack of understanding around different user needs.</p>
+          <p>Designing pages that are accessible for everyone shouldn’t be too difficult. The developers at Tech
+            Returners
+            News have collated an ‘easy wins' checklist for Web page accessibility. Keep this guide handy... When
+            creating
+            your own websites you can check these criteria off the list!</p>
+          <p><a href="related-article.html">What would a truly accessible city look like? Read more..</a></p>
+        </section>
+
       </section>
-      <section id="accessibility-checks">
-        <h2>Accessibility Checks</h2>
-        <section id="Text-size">
-          <h3>Text Size</h3>
-          <p>Text size on a web page can also be adjusted to meet the needs of different users. This can be done using
-            the text resize settings in a browser, text-only zoom, or page zoom. These options allow users to increase
-            or
-            decrease the size of the text on a page without causing issues such as text overlapping or being cut off
-            the
-            page.</p>
-        </section>
-        <section id="images">
-          <h3>Images and Alt-Text</h3>
-          <p>Images on a web page should also have alternative text, also known as "alt text," to provide a
-            description
-            of
-            the image for users who are unable to see it. This is particularly important for users who are using
-            screen
-            readers or other assistive technologies.</p>
-        </section>
-        <section id="links">
-          <h3>Hyperlinks</h3>
-          <p>Hyperlinks, also known as links, should make sense when read out of context, and they should be clearly
-            presented in a different text style from the normal body text. Links that open in a new browser page
-            should be labeled as such.</p>
-        </section>
-        <section id="scripts">
-          <h3>Use of Scripting Languages</h3>
-          <p>JavaScript and other scripts are often used for navigation or functionality on a web page, but it is
-            important
-            to have an alternative mechanism in place for users whose browsers do not support these scripts. This
-            ensures
-            that all users can access the information on the website.</p>
-        </section>
-        <section id="colour">
-          <h3>Colour and Contrast</h3>
-          <p>The color contrast between text and background on a web page should be sufficient to ensure that the text
-            is
-            easy to read. It is also important to ensure that information is not referenced by color alone, as this
-            can
-            make
-            it difficult for users who are colorblind to access the information.</p>
-        </section>
-        <section id=css>
-          <h3>Style Sheets</h3>
-          <p>Style sheets, which control the appearance of a web page, can sometimes cause issues if they are not
-            supported
-            or turned off. It is important to ensure that the information on the website can still be accessed and
-            read
-            even
-            if style sheets are not supported.</p>
-        </section>
-        <section id="forms">
-          <h3>Form Design</h3>
-          <p>Forms on a web page should be marked up correctly so that they can be used with only the keyboard,
-            voice
-            input,
-            or screen readers. Form labels should be clickable, increasing the target area and making it easier to
-            select
-            small radio buttons or checkboxes.</p>
-        </section>
-      </section>
+      <section id="checks">
+      <h2>Accessibility Checks</h2>
+    </section>
+      <div class="row">
+        <div class="column">
+          <section id="headings">
+            <h3>Headings</h3>
+            <p>HTML heading elements, such as H1, H2, and H3, are used to represent the structure of a web page. This
+              structure is important for assistive technologies, such as screen readers, that allow users to navigate a
+              page by
+              heading. By using heading elements correctly, users can easily understand the organization of the content
+              on
+              a page
+              and quickly find the information they need.</p>
+          </section>
+          <section id="text-size">
+            <h3>Text Size</h3>
+            <p>Text size on a web page can also be adjusted to meet the needs of different users. This can be done using
+              the text resize settings in a browser, text-only zoom, or page zoom. These options allow users to increase
+              or
+              decrease the size of the text on a page without causing issues such as text overlapping or being cut off
+              the
+              page.</p>
+          </section>
+          <section id="images">
+            <h3>Images and Alt-Text</h3>
+            <p>Images on a web page should also have alternative text, also known as "alt text," to provide a
+              description
+              of
+              the image for users who are unable to see it. This is particularly important for users who are using
+              screen
+              readers or other assistive technologies.</p>
+          </section>
+          <section id="links">
+            <h3>Hyperlinks</h3>
+            <p>Hyperlinks, also known as links, should make sense when read out of context, and they should be clearly
+              presented in a different text style from the normal body text. Links that open in a new browser page
+              should be labeled as such.</p>
+          </section>
+        </div>
+        <div class="column">
+          <section id="scripts">
+            <h3>Use of Scripting Languages</h3>
+            <p>JavaScript and other scripts are often used for navigation or functionality on a web page, but it is
+              important
+              to have an alternative mechanism in place for users whose browsers do not support these scripts. This
+              ensures
+              that all users can access the information on the website.</p>
+          </section>
+          <section id="colour">
+            <h3>Colour and Contrast</h3>
+            <p>The color contrast between text and background on a web page should be sufficient to ensure that the text
+              is
+              easy to read. It is also important to ensure that information is not referenced by color alone, as this
+              can
+              make
+              it difficult for users who are colorblind to access the information.</p>
+          </section>
+          <section id=css>
+            <h3>Style Sheets</h3>
+            <p>Style sheets, which control the appearance of a web page, can sometimes cause issues if they are not
+              supported
+              or turned off. It is important to ensure that the information on the website can still be accessed and
+              read
+              even
+              if style sheets are not supported.</p>
+          </section>
+          <section id="forms">
+            <h3>Form Design</h3>
+            <p>Forms on a web page should be marked up correctly so that they can be used with only the keyboard,
+              voice
+              input,
+              or screen readers. Form labels should be clickable, increasing the target area and making it easier to
+              select
+              small radio buttons or checkboxes.</p>
+          </section>
+        </div>
+      </div>
       <section id="conclusion">
         <h3>Conclusion</h3>
         <p>Web accessibility is important to ensure that all users can access the information on a website.
           By using HTML heading elements, re-sizing text, providing alternative text for images, using clear link
           text,
-          having JavaScript independence, checking color contrast, ensuring style sheet support, and correctly marking
+          having JavaScript independence, checking color contrast, ensuring style sheet support, and correctly
+          marking
           up
           forms, web developers can create websites that are accessible to all users, including those with
           disabilities.
@@ -169,37 +177,42 @@
       </section>
 
       <footer>
-        <nav>
-          <h2>More Stories</h2>
-          <ul>
-            <li><a href="https://youtu.be/EWbgKCENqn0">Tokyo Olympics: gold for Great Britain!</a></li>
-            <li><a href="https://www.youtube.com/watch?v=2Z4m4lnjxkY">A day in the life of</a></li>
-            <li><a href="https://www.youtube.com/watch?v=MGXSPf9b-xI">Call for action as UK driver shortage hits
-                supermarkets</a></li>
-            <li><a href="https://youtu.be/nYDiggEp-hw">The six worst school sports memories of your
-                childhood</a></li>
-            <li><a href="https://www.youtube.com/watch?v=6n8LdHRifOk">Clairvoyants evening cancelled from unforeseen
-                circumstances</a></li>
-            <li><a href="https://www.youtube.com/watch?v=oOGJQD0WXkk">Safety meeting ends in accident</a></li>
-            <li><a href="https://www.youtube.com/watch?v=l0ndz20w2Oc">Russian traffic officer with golden toilet is
-                arrested after police uncover massive bribery scheme</a></li>
-            <li><a href="https://www.youtube.com/watch?v=aotlEpmAFVQ">Jellyfish apocalypse is coming claim
-                scientists</a></li>
-          </ul>
-        </nav>
+        <section>
+          <nav>
+
+            <h2>More Stories</h2>
+            <ul>
+              <li><a href="https://youtu.be/EWbgKCENqn0">Tokyo Olympics: gold for Great Britain!</a></li>
+              <li><a href="https://www.youtube.com/watch?v=2Z4m4lnjxkY">A day in the life of</a></li>
+              <li><a href="https://www.youtube.com/watch?v=MGXSPf9b-xI">Call for action as UK driver shortage hits
+                  supermarkets</a></li>
+              <li><a href="https://youtu.be/nYDiggEp-hw">The six worst school sports memories of your
+                  childhood</a></li>
+              <li><a href="https://www.youtube.com/watch?v=6n8LdHRifOk">Clairvoyants evening cancelled from
+                  unforeseen
+                  circumstances</a></li>
+              <li><a href="https://www.youtube.com/watch?v=oOGJQD0WXkk">Safety meeting ends in accident</a></li>
+              <li><a href="https://www.youtube.com/watch?v=l0ndz20w2Oc">Russian traffic officer with golden toilet
+                  is
+                  arrested after police uncover massive bribery scheme</a></li>
+              <li><a href="https://www.youtube.com/watch?v=aotlEpmAFVQ">Jellyfish apocalypse is coming claim
+                  scientists</a></li>
+            </ul>
+          </nav>
+        </section>
 
       </footer>
     </article>
   </main>
   <footer>
-    <img src="../img/trlogo.jpg" alt="Tech returners logo class="footer-logo">
-    <nav>
+    <img class="--footer-logo" src="../img/trlogo.jpg" alt="Tech returners logo">
+    <nav class="--nav --header-nav">
       <ul>
-        <li><a href="stopsign.jpg">News</a>
-        <li><a href="stopsign.jpg">Opinion</a></li>
-        <li><a href="stopsign.jpg">Sport</a></li>
-        <li><a href="stopsign.jpg">Culture</a></li>
-        <li><a href="stopsign.jpg">Tech</a></li>
+        <li><a href="../img/stopsign.jpg">News</a>
+        <li><a href="../img/stopsign.jpg">Opinion</a></li>
+        <li><a href="../img/stopsign.jpg">Sport</a></li>
+        <li><a href="../img/stopsign.jpg">Culture</a></li>
+        <li><a href="../img/stopsign.jpg">Tech</a></li>
       </ul>
     </nav>
     <p>© 2021 Tech Returners News</p>
