Mostly working - edges need lining up

--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,6 @@
   <main>
     <article>
       <section id="introduction">
-        <img src="../img/atricle-image.jpg" alt="A person using a computer with a screen reader" object-fit: contain; id="article-image1">
         <section id="introtext">
           <h2>Introduction</h2>
           <p>Tim Berners Lee dreamt of a World Wide Web that would be free and accessible to everyone. Sadly, the modern
@@ -81,11 +80,11 @@
             your own websites you can check these criteria off the list!</p>
           <p><a href="related-article.html">What would a truly accessible city look like? Read more..</a></p>
         </section>
-
+        <img src="../img/atricle-image.jpg" alt="A person using a computer with a screen reader" id="article-image1">
       </section>
       <section id="checks">
-      <h2>Accessibility Checks</h2>
-    </section>
+        <h2>Accessibility Checks</h2>
+      </section>
       <div class="row">
         <div class="column">
           <section id="headings">
@@ -205,8 +204,8 @@
     </article>
   </main>
   <footer>
-    <img class="--footer-logo" src="../img/trlogo.jpg" alt="Tech returners logo">
-    <nav class="--nav --header-nav">
+
+    <nav class="--nav --header-nav --footer-nav">
       <ul>
         <li><a href="../img/stopsign.jpg">News</a>
         <li><a href="../img/stopsign.jpg">Opinion</a></li>
@@ -215,6 +214,11 @@
         <li><a href="../img/stopsign.jpg">Tech</a></li>
       </ul>
     </nav>
-    <p>© 2021 Tech Returners News</p>
+    <div class="row footer-spam">
+      <img class="--footer-logo" src="../img/trlogo.jpg" alt="Tech returners logo">
+      <p>© 2021 Tech Returners News</p>
+    </div>
+
+
   </footer>
 </body>
